# mysql-connector-python

./: .clang-format  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGES.txt  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  MANIFEST.in  README.rst  README.txt  build-wheel.sh  pyproject.toml  setup.py  setupinfo.py  unittests.py
cpydist/: __init__.py  bdist.py  bdist_deb.py  bdist_macos.py  bdist_msi.py  bdist_rpm.py  bdist_solaris.py  bdist_wheel.py  sdist.py  utils.py  wix.py
docs/: README_DOCS.txt
docs/mysqlx/: Makefile  conf.py  index.rst  installation.rst  license.rst  make.bat  mysqlx.AlterViewStatement.rst  mysqlx.Client.rst  mysqlx.Collection.rst  mysqlx.Column.rst  mysqlx.ColumnDef.rst  mysqlx.ColumnMetaData.rst  mysqlx.CreateTableStatement.rst  mysqlx.CreateViewStatement.rst  mysqlx.DataError.rst  mysqlx.DeleteStatement.rst  mysqlx.Error.rst  mysqlx.FindStatement.rst  mysqlx.ForeignKeyDef.rst  mysqlx.GeneratedColumnDef.rst  mysqlx.NotSupportedError.rst  mysqlx.PasswordHandler.rst  mysqlx.PersistenceHandler.rst  mysqlx.PoolError.rst  mysqlx.RemoveStatement.rst  mysqlx.RowResult.rst  mysqlx.Schema.rst  mysqlx.SelectStatement.rst  mysqlx.Session.rst  mysqlx.SessionConfig.rst  mysqlx.SessionConfigManager.rst  mysqlx.SqlStatement.rst  mysqlx.Table.rst  mysqlx.TimeoutError.rst  mysqlx.View.rst  mysqlx.Warning.rst  mysqlx.WriteStatement.rst  mysqlx.get_client.rst  mysqlx.get_session.rst  mysqlx.rst  (+3 more)
examples/: dates.py  engines.py  inserts.py  microseconds.py  multi_resultsets.py  mysql_warnings.py  prepared_statements.py  transaction.py  unicode.py  warnings.py
lib/: cpy_distutils.py  test.py
lib/mysqlx/: __init__.py  authentication.py  charsets.py  compat.py  config.py  connection.py  constants.py  crud.py  dbdoc.py  errorcode.py  errors.py  expr.py  expr_backup.py  expr_unparser.py  helpers.py  logger.py  protobuf.py  protocol.py  result.py  statement.py  types.py
mysql-connector-python/: setup.py  unittests.py
mysql-connector-python/cpydist/: bdist_solaris.py
mysql-connector-python/examples/: engines.py  multi_resultsets.py  unicode.py  warnings.py
mysql-connector-python/src/: mysql_capi.c  mysql_capi_conversion.c  mysql_connector.c
mysql-connector-python/tests/: __init__.py  test_abstracts.py  test_aio_authentication.py  test_aio_connection.py  test_aio_cursor.py  test_authentication.py  test_connection.py  test_constants.py  test_conversion.py  test_django.py  test_locales.py  test_pep249.py  test_protocol.py  test_utils.py
mysqlx-connector-python/: MANIFEST.in  pyproject.toml  setup.py  unittests.py
mysqlx-connector-python/cpydist/: __init__.py  bdist.py  bdist_solaris.py  bdist_wheel.py  utils.py
mysqlx-connector-python/tests/: __init__.py  mysqld.py  requirements.txt  test_mysqlx_connection.py  test_mysqlx_crud.py  test_mysqlx_errorcode.py  test_mysqlx_errors.py  test_mysqlx_pooling.py
python2/examples/: client.py  config.py  dates.py  engines.py  inserts.py  microseconds.py  multi_resultsets.py  prepared_statements.py  transaction.py  unicode.py  warnings.py
python23/django/: base.py  compiler.py  introspection.py  validation.py
python23/fabric/: __init__.py  caching.py  connection.py
python3/examples/: config.py  dates.py  engines.py  inserts.py  microseconds.py  multi_resultsets.py  prepared_statements.py  transaction.py  unicode.py  warnings.py
src/: exceptions.c  force_cpp_linkage.cc  mysql_capi.c  mysql_capi_conversion.c  mysql_connector.c
src/include/: catch23.h  exceptions.h  mysql_capi.h  mysql_capi_conversion.h  mysql_connector.h
src/mysqlxpb/: mysqlxpb.cc  python.h  python_cast.h
support/django/: run_django_tests.py  test_mysqlconnector_settings.py
support/style/: pylint.rc  pylint_tests.rc
tests/: __init__.py  mysqld.py  py26.py  requirements.txt  test_abstracts.py  test_authentication.py  test_bugs.py  test_connection.py  test_constants.py  test_conversion.py  test_cursor.py  test_django.py  test_errorcode.py  test_errors.py  test_examples.py  test_fabric.py  test_locales.py  test_mysql_datatypes.py  test_mysqlx_connection.py  test_mysqlx_crud.py  test_mysqlx_errorcode.py  test_mysqlx_errors.py  test_mysqlx_pooling.py  test_mysqlx_style.py  test_network.py  test_optionfiles.py  test_pep249.py  test_pooling.py  test_protocol.py  test_setup.py  test_style.py  test_utils.py
tests/cext/: test_cext_api.py  test_cext_connection.py  test_cext_cursor.py
tests/data/: local_data.csv
tests/docker/: Dockerfile  runner.sh
tests/issues/: test_bug21449207.py  test_bug21449996.py  test_bug21879859.py  test_bug21879914.py  test_bug22545879.py
tests/otel/: collector.py  test_instrumentation.py
tests/py2/: __init__.py  bugs.py  connection.py  cursor.py  test_bugs_future.py  test_conversion.py  test_network.py  test_protocol.py  test_utils.py
tests/py3/: __init__.py  bugs.py  connection.py  cursor.py  test_conversion.py  test_network.py  (+2 more)
(+458 files in other folders)
